@@ -1,8 +1,8 @@
 Package: carat
 Type: Package
 Title: Covariate-Adaptive Randomization for Clinical Trials
-Version: 2.0.2
-Date: 2021-10-16
+Version: 2.1.0
+Date: 2022-11-29
 Authors@R: c(
     person(given="Fuyi", family="Tu", email="fuyi.tu@ruc.edu.cn", role="aut"),
     person(given="Xiaoqing", family="Ye", email="ye_xiaoq@163.com", role=c("aut","cre")),
@@ -22,6 +22,6 @@ Suggests: dplyr (>= 0.8.5)
 Depends: R (>= 3.6.0)
 NeedsCompilation: yes
 LinkingTo: Rcpp, RcppArmadillo
-Packaged: 2021-10-16 07:37:09 UTC; YeXiaoqing
+Packaged: 2022-11-30 01:59:01 UTC; liliecnu
 Repository: CRAN
-Date/Publication: 2021-10-16 09:30:02 UTC
+Date/Publication: 2022-11-30 08:20:02 UTC
