@@ -1,4 +1,4 @@
-3d0285298ec302ae5e6eb47862fc932c *DESCRIPTION
+49ce7c912afa34cbf7a15e762efc813d *DESCRIPTION
 07ffb2370f78166edf94c672aa6372ce *NAMESPACE
 7816bf0b976fcba434f5e72726b865c7 *R/RcppExports.R
 5f9598d6c7a62d5dcb2f0a529b4dc706 *R/class_carandom.R
@@ -11,13 +11,13 @@ db9591ee475c264f3f40760314239f79 *R/class_carcomp.R
 6911e501dd4594a7e38a5a3126750d13 *R/rand_completeData.R
 5bb628ad99b81b7d9c2499108b0e425b *R/rand_evalRand.R
 a154e44176446fe360bc1aed0ff3406b *R/rand_generatingData.R
-3a9a7e821e0cbdf571bc9d8d90e6772d *R/test_Rfunction.R
-31fd3b1721d7d7b18bfcea29f08a9dbf *data/pats.rda
-8b998dd0ebccc0327192b3532d898b69 *inst/NEWS.Rd
+03fab72212cbee4041dbcd7417bc999c *R/test_Rfunction.R
+d6bfb027d5e0223f70b35254c3854946 *data/pats.rda
+13f89a84e7a3dd7ed4b4d03faf24ae54 *inst/NEWS.Rd
 50a1c0ef3ed558bcd1b508cb272d782e *man/AdjBCD.Rd
 6bfa34bc99378e0f1eb6d95d8e5c3c1d *man/AdjBCD.sim.Rd
 3a8ba4edf3b6e43ef2b671d89288b645 *man/AdjBCD.ui.Rd
-51f2225dffd40a5629e9de696367a04c *man/CompPower.Rd
+28b1522ec3ddc6ae6744869fe0460b35 *man/CompPower.Rd
 769f989c7f4b2b7db3962eda7154025e *man/DoptBCD.Rd
 edf2dec95b1dc1c846b5bea826e715c1 *man/DoptBCD.sim.Rd
 a9b47926e818f22d6daf0f06afefb2b8 *man/DoptBCD.ui.Rd
@@ -36,14 +36,14 @@ bfeaf056240fc744af22853aefb76693 *man/HuHuCAR.ui.Rd
 cd7d04403fceaad28fb9aedd3a018422 *man/boot.test.Rd
 fd4b44f4ef039fbd17e081037f82379c *man/carat-package.Rd
 d1231a1c4b2696fa89c2bf0a3956293f *man/compRand.Rd
-6071cf23f77aae3f5d54eb550625f278 *man/corr.test.Rd
-2c242edcd63cc3422f926968823869bf *man/evalPower.Rd
+2837a60e89f90dc805122b0484fc14ce *man/corr.test.Rd
+880f05db8414bb9dd79901bfe1b4da07 *man/evalPower.Rd
 0a1a245f445507291ebe1b369cb0bf1b *man/evalRand.Rd
 797cc82ff79fd80ef08b289808d734b2 *man/evalRand.sim.Rd
-17d4934fd244e77c18ec712d229118bb *man/getData.Rd
+4f3931d43815f6464f612a4761e14069 *man/getData.Rd
 3372b223028811c737abb8a9e89feaef *man/pats.Rd
-dfa8f005c42d6fa752903d33c0f0b325 *man/rand.test.Rd
-6abdbc3c51832738078d4498b04266ab *src/InnerFun.cpp
+bbf32f6f2af2612fce10f9f2ab3c981c *man/rand.test.Rd
+b1a1b3f58b8fd0f295e1ed8e48f5bccc *src/InnerFun.cpp
 61059660eb073d93e00e8ee054237071 *src/Makevars
 61059660eb073d93e00e8ee054237071 *src/Makevars.win
 1ac156a7fc67fdfc79a9a46171c6053e *src/RcppExports.cpp
