@@ -23,7 +23,7 @@ n = 1000
 cov_num = 5
 level_num = c(2,2,2,2,2)
 pr = rep(0.5,10)
-beta = c(1,4,3,2,5)
+beta = c(1,4,3,2,5,5,4,3,2,1)
 di = seq(0,0.5,0.1)
 sigma = 1
 type = "linear"
