@@ -40,7 +40,7 @@ n = 1000
 cov_num = 5
 level_num = c(2,2,2,2,2)
 pr = rep(0.5,10)
-beta = c(0.1,0.4,0.3,0.2,0.5)
+beta = c(0.1,0.4,0.3,0.2,0.5,0.5,0.4,0.3,0.2,0.1)
 omega = c(0.1, 0.1, rep(0.8 / 5, times = 5))
 mu1 = 0
 mu2 = 0.7
